Reorganization of the project and bug fix

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <a href="./index.html" class="title"><h1>Noe Jager</h1></a>
             <div class="links">
                 <a href="./index.html">Home</a>
-                <a href="./aboutme.html">About Me</a>
-                <a href="./education.html">Education</a>
-                <a href="./projects.html">Projects</a>
+                <a href="./pages/aboutme/aboutme.html">About Me</a>
+                <a href="./pages/education/education.html">Education</a>
+                <a href="./pages/projects/projects.html">Projects</a>
             </div>
         </div>
         <main>
@@ -61,19 +61,19 @@
                     </figure>
                 </div>
                 <div class="links">
-                    <a href="./projects.html#6"><h4>Drawing with a webcam</h4></a>
+                    <a href="./pages/projects/projects.html#6"><h4>Drawing with a webcam</h4></a>
                     <br>
-                    <a href="./projects.html#5"><h4>Design of a privacy app with Figma</h4></a>
+                    <a href="./pages/projects/projects.html#5"><h4>Design of a privacy app with Figma</h4></a>
                     <br>
-                    <a href="./projects.html#4"><h4>Handwriting generator with Tensorflow</h4></a>
+                    <a href="./pages/projects/projects.html#4"><h4>Handwriting generator with Tensorflow</h4></a>
                     <br>
-                    <a href="./projects.html#3"><h4>Conversational Chatbot with Tensorflow</h4></a>
+                    <a href="./pages/projects/projects.html#3"><h4>Conversational Chatbot with Tensorflow</h4></a>
                     <br>
-                    <a href="./projects.html#2"><h4>Q Learning for a drone in a simulated environment</h4></a>
+                    <a href="./pages/projects/projects.html#2"><h4>Q Learning for a drone in a simulated environment</h4></a>
                     <br>
-                    <a href="./projects.html#1"><h4>Control of a group of drone with Unreal Engine 4 using Python</h4></a>
+                    <a href="./pages/projects/projects.html#1"><h4>Control of a group of drone with Unreal Engine 4 using Python</h4></a>
                     <br>
-                    <a href="./projects.html#0"><h4> Chase with Sparki </h4></a> 
+                    <a href="./pages/projects/projects.html#0"><h4> Chase with Sparki </h4></a> 
                 </div>
             </div>
         </main>
@@ -85,6 +85,6 @@
                 <a href="mailto:noe.p.jager@gmail.com"><img src="assets/img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
             </figure>
         </footer>
-        <script src="script.js"></script>
+        <script src="./events/nav_scroll.js"></script>
     </body>
 </html>
