--- a/pages/aboutme/aboutme.html
+++ b/pages/aboutme/aboutme.html
@@ -5,17 +5,17 @@
         <title>
             About me | Noé Jager
         </title>
-        <link href="./style.css" rel="stylesheet">
+        <link href="../../assets/style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width,maximum-scale=1.0" />
     </head>
     <body>
         <div id="nav">
-            <a href="./index.html" class="title"><h1>Noe Jager</h1></a>
+            <a href="./../../index.html" class="title"><h1>Noe Jager</h1></a>
             <div class="links">
-                <a href="./index.html">Home</a>
+                <a href="./../../index.html">Home</a>
                 <a href="./aboutme.html">About Me</a>
-                <a href="./education.html">Education</a>
-                <a href="./projects.html">Projects</a>
+                <a href="../education/education.html">Education</a>
+                <a href="../projects/projects.html">Projects</a>
             </div>
         </div>
         <main id="aboutme">
@@ -37,10 +37,10 @@
                 (Times Higher Education ranking 2022). Eager to explore the 'France in America', I embarked on a journey to Montreal. 
                 Fluent in four languages (French, English, German, Japanese), I have gained valuable experience from a diverse range of projects undertaken during my bachelor studies, 
                 often in collaboration with esteemed researchers. 
-                These projects spanned areas such as Artificial Intelligence, Robotics like my <a href="./projects.html#2"> Q Learning for a drone in a simulated environment</a> 
-                and <a href="./projects.html#1">Control of a group of drone with Unreal Engine 4 using Python</a> projects, and  Human-Computer Interaction, and Computer Vision 
-                with <a href="./projects.html#5">Design of a privacy app with Figma</a> and <a href="./projects.html#6">Drawing with a webcam</a>. 
-                I invite you to explore my <a href="./education.html">Education</a> and <a href="./projects.html">Projects</a> pages for further insights into my academic and professional journey.
+                These projects spanned areas such as Artificial Intelligence, Robotics like my <a href="../projects/projects.html#2"> Q Learning for a drone in a simulated environment</a> 
+                and <a href="../projects/projects.html#1">Control of a group of drone with Unreal Engine 4 using Python</a> projects, and  Human-Computer Interaction, and Computer Vision 
+                with <a href="../projects/projects.html#5">Design of a privacy app with Figma</a> and <a href="../projects/projects.html#6">Drawing with a webcam</a>. 
+                I invite you to explore my <a href="../education/education.html">Education</a> and <a href="../projects/projects.html">Projects</a> pages for further insights into my academic and professional journey.
             </p>
             <!--
                 3. Mission or Purpose: Clearly communicate your mission or purpose. Explain what motivates you or your brand and why you do what you do. This helps your 
@@ -79,7 +79,7 @@
             -->
             <p>
                 I invite you to contact me down below if you have any fun and interesting projects you need some help on. And I also recommend you to go see my 
-                <a href="./education.html">Education</a> and <a href="./projects.html">Projects</a> pages.
+                <a href="../education/education.html">Education</a> and <a href="../projects/projects.html">Projects</a> pages.
             </p>
             <!--
                 9. Visuals: Incorporate visuals such as photos or videos to make your About Me page more engaging. This could include pictures of yourself, 
@@ -89,11 +89,11 @@
         <footer>
             <h3>Contact Me</h3>
             <figure class="contacts">
-                <a href="https://github.com/elnukakujo" target="_blank"><img src="img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
-                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
-                <a href="mailto:noe.p.jager@gmail.com"><img src="img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
+                <a href="https://github.com/elnukakujo" target="_blank"><img src="../../assets/img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="../../assets/img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
+                <a href="mailto:noe.p.jager@gmail.com"><img src="../../assets/img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
             </figure>
         </footer>
-        <script src="script.js"></script>
+        <script src="../../events/nav_scroll.js"></script>
     </body>
 </html>
