--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -4,16 +4,16 @@
         <title>
             Projects | Noé Jager
         </title>
-        <link href="./style.css" rel="stylesheet">
+        <link href="../../assets/style.css" rel="stylesheet">
         <meta name="viewport" content="width=device-width,maximum-scale=1.0" />
     </head>
     <body>
         <div id="nav">
-            <a href="./index.html" class="title"><h1>Noe Jager</h1></a>
+            <a href="./../../index.html" class="title"><h1>Noe Jager</h1></a>
             <div class="links">
-                <a href="./index.html">Home</a>
-                <a href="./aboutme.html">About Me</a>
-                <a href="./education.html">Education</a>
+                <a href="./../../index.html">Home</a>
+                <a href="../aboutme/aboutme.html">About Me</a>
+                <a href="../education/education.html">Education</a>
                 <a href="./projects.html">Projects</a>
             </div>
         </div>
@@ -107,11 +107,11 @@
         <footer>
             <h3>Contact Me</h3>
             <figure class="contacts">
-                <a href="https://github.com/elnukakujo" target="_blank"><img src="img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
-                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
-                <a href="mailto:noe.p.jager@gmail.com"><img src="img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
+                <a href="https://github.com/elnukakujo" target="_blank"><img src="../../assets/img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
+                <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="../../assets/img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
+                <a href="mailto:noe.p.jager@gmail.com"><img src="../../assets/img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
             </figure>
         </footer>
-        <script src="script.js"></script>
+        <script src="../../events/nav_scroll.js"></script>
     </body>
 </html>
