Added dropwon menu on projects

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
                 <a href="./index.html">Home</a>
                 <a href="./pages/aboutme/aboutme.html">About Me</a>
                 <a href="./pages/education/education.html">Education</a>
-                <a href="./pages/projects/projects.html">Projects</a>
+                <div class="dropdown">
+                    <a class="drop-trigger" href="./pages/projects/projects.html">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="./pages/projects/projects.html#bachelor_projects">Bachelor Projects</a>
+                    </div>
+                </div>
             </div>
         </div>
         <main>
@@ -25,7 +30,7 @@
                         <a href="aboutme.html"><img src="assets/img/index/me.jpg" alt="A picture of me" width="325" height="500"/></a>
                     </figure>
                     <section>
-                        <a href="./aboutme.html"><h3>About Me</h3></a>
+                        <a href="./aboutme.html"><h2>About Me</h2></a>
                         <p> 
                             I'm Noé Jager, a master's student in Computer Science, with a diverse skillset honed during my university years and 
                             a passion for tackling new challenges. Over time, I've gained extensive experience in programming, specializing in 
@@ -36,7 +41,7 @@
                 </div>
             </div>
             <div id="education_intro">
-                <h3>Education</h3>
+                <h2>Education</h2>
                 <div class="img">
                     <figure class="udem">
                         <img src="assets/img/index/udem_ete.jpg" alt="Udem in Summer" width="325" height="500">
@@ -52,7 +57,7 @@
                 </div>
             </div>
             <div id="projects_intro">
-                <h3>Projects</h3>
+                <h2>Projects</h2>
                 <div class="img">
                     <figure>
                         <img src="assets/img/projects/sparki.jpg" alt="A little Sparki robot" width="325" height="500">
@@ -61,24 +66,24 @@
                     </figure>
                 </div>
                 <div class="links">
-                    <a href="./pages/projects/projects.html#6"><h4>Drawing with a webcam</h4></a>
+                    <a href="./pages/projects/projects.html#drawing_with_webcam"><h4>Drawing with a webcam</h4></a>
                     <br>
-                    <a href="./pages/projects/projects.html#5"><h4>Design of a privacy app with Figma</h4></a>
+                    <a href="./pages/projects/projects.html#privacy_app_figma"><h4>Design of a privacy app with Figma</h4></a>
                     <br>
-                    <a href="./pages/projects/projects.html#4"><h4>Handwriting generator with Tensorflow</h4></a>
+                    <a href="./pages/projects/projects.html#handwriting_generator"><h4>Handwriting generator with Tensorflow</h4></a>
                     <br>
-                    <a href="./pages/projects/projects.html#3"><h4>Conversational Chatbot with Tensorflow</h4></a>
+                    <a href="./pages/projects/projects.html#chatbot"><h4>Conversational Chatbot with Tensorflow</h4></a>
                     <br>
-                    <a href="./pages/projects/projects.html#2"><h4>Q Learning for a drone in a simulated environment</h4></a>
+                    <a href="./pages/projects/projects.html#q_learning_drone"><h4>Q Learning for a drone in a simulated environment</h4></a>
                     <br>
-                    <a href="./pages/projects/projects.html#1"><h4>Control of a group of drone with Unreal Engine 4 using Python</h4></a>
+                    <a href="./pages/projects/projects.html#group_drone"><h4>Control of a group of drone with Unreal Engine 4 using Python</h4></a>
                     <br>
-                    <a href="./pages/projects/projects.html#0"><h4> Chase with Sparki </h4></a> 
+                    <a href="./pages/projects/projects.html#sparki"><h4> Chase with Sparki </h4></a> 
                 </div>
             </div>
         </main>
         <footer>
-            <h3>Contact Me</h3>
+            <h2>Contact Me</h2>
             <figure class="contacts">
                 <a href="https://github.com/elnukakujo" target="_blank"><img src="assets/img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
                 <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="assets/img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
