--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -14,12 +14,19 @@
                 <a href="./../../index.html">Home</a>
                 <a href="../aboutme/aboutme.html">About Me</a>
                 <a href="../education/education.html">Education</a>
-                <a href="./projects.html">Projects</a>
+                <div class="dropdown">
+                    <a class="drop-trigger" href="./projects.html">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="./projects.html#bachelor_projects">Bachelor Projects</a>
+                    </div>
+                </div>
             </div>
         </div>
         <main id="projects">
-            <h3>Projects</h3>
-            <div class="anchor" id="6"></div>
+            <h2>Projects</h2>
+            <div class="anchor" id="bachelor_projects"></div>
+            <h3>Bachelor Projects</h3>
+            <div class="anchor" id="drawing_with_webcam"></div>
             <div>
                 <h4 class="title"><a href="https://github.com/elnukakujo/BSP06-Drawing-with-a-webcam" target="_blank">Drawing with a webcam</a></h4 class="title">
                 <ul>
@@ -29,7 +36,7 @@
                     <li> Analyzed finger positions to determine drawing actions </li>
                 </ul>
             </div>
-            <div class="anchor" id="5"></div>
+            <div class="anchor" id="privacy_app_figma"></div>
             <div>
                 <h4 class="title">Design of a privacy app with Figma</h4 class="title">
                 <embed 
@@ -42,7 +49,7 @@
                     referrerpolicy="strict-origin-when-cross-origin" 
                     allowfullscreen>
             </div>
-            <div class="anchor" id="4"></div>
+            <div class="anchor" id="handwriting_generator"></div>
             <div>
                 <h4 class="title">Handwriting generator with Tensorflow</h4 class="title">
                 <ul>
@@ -54,7 +61,7 @@
                     <li> Replicated various handwriting styles using a dataset from a separate project </li>
                 </ul>
             </div>
-            <div class="anchor" id="3"></div>
+            <div class="anchor" id="chatbot"></div>
             <div>
                 <h4 class="title">Conversational Chatbot with Tensorflow </h4 class="title">
                 <ul>
@@ -64,7 +71,7 @@
                     <li> Reddit threads with parent commentaries as a dataset between French and English and engages in small talk </li>
                 </ul>
             </div>
-            <div class="anchor" id="2"></div>
+            <div class="anchor" id="q_learning_drone"></div>
             <div>
                 <h4 class="title">Q Learning for a drone in a simulated environment</h4 class="title">
                 <ul>
@@ -74,7 +81,7 @@
                     <li> Q-learning with a defined Q table and rewards </li>
                 </ul>
             </div>
-            <div class="anchor" id="1"></div>
+            <div class="anchor" id="group_drone"></div>
             <div>
                 <h4 class="title"> Control of a group of drone with Unreal Engine 4 using Python </h4 class="title">
                 <ul>
@@ -93,7 +100,7 @@
                     referrerpolicy="strict-origin-when-cross-origin" 
                     allowfullscreen>
             </div>
-            <div class="anchor" id="0"></div>
+            <div class="anchor" id="sparki"></div>
             <div>
                 <h4 class="title"> Chase with Sparki </h4 class="title">
                 <ul>
@@ -105,7 +112,7 @@
             </div>
         </main>
         <footer>
-            <h3>Contact Me</h3>
+            <h2>Contact Me</h2>
             <figure class="contacts">
                 <a href="https://github.com/elnukakujo" target="_blank"><img src="../../assets/img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
                 <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="../../assets/img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
