--- a/pages/aboutme/aboutme.html
+++ b/pages/aboutme/aboutme.html
@@ -15,7 +15,12 @@
                 <a href="./../../index.html">Home</a>
                 <a href="./aboutme.html">About Me</a>
                 <a href="../education/education.html">Education</a>
-                <a href="../projects/projects.html">Projects</a>
+                <div class="dropdown">
+                    <a class="drop-trigger" href="../projects/projects.html">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="../projects/projects.html#bachelor_projects">Bachelor Projects</a>
+                    </div>
+                </div>
             </div>
         </div>
         <main id="aboutme">
@@ -87,7 +92,7 @@
             -->
         </main>
         <footer>
-            <h3>Contact Me</h3>
+            <h2>Contact Me</h2>
             <figure class="contacts">
                 <a href="https://github.com/elnukakujo" target="_blank"><img src="../../assets/img/logo/github_logo.jpg" width="50px" height="50px" alt="GitHub"></a>
                 <a href="https://www.linkedin.com/in/no%C3%A9-jager-2b4866236/" target="_blank"><img src="../../assets/img/logo/linkedin_logo.jpg" width="50px" height="50px" alt="Linkedin"></a>
