Added education dropdown

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
             <div class="links">
                 <a href="./index.html">Home</a>
                 <a href="./pages/aboutme/aboutme.html">About Me</a>
-                <a href="./pages/education/education.html">Education</a>
+                <div class="dropdown">
+                    <a class="drop-trigger" href="./pages/education/education.html">Education</a>
+                    <div class="dropdown-content">
+                        <a href="./pages/education/education.html#masterUdem">Master</a>
+                        <a href="./pages/education/education.html#bacUniLu">Bachelor</a>
+                        <a href="./pages/education/education.html#oc">Online Courses</a>
+                    </div>
+                </div>
                 <div class="dropdown">
                     <a class="drop-trigger" href="./pages/projects/projects.html">Projects</a>
                     <div class="dropdown-content">
