--- a/pages/education/education.html
+++ b/pages/education/education.html
@@ -13,7 +13,14 @@
             <div class="links">
                 <a href="./../../index.html">Home</a>
                 <a href="../aboutme/aboutme.html">About Me</a>
-                <a href="./education.html">Education</a>
+                <div class="dropdown">
+                    <a class="drop-trigger" href="./education.html">Education</a>
+                    <div class="dropdown-content">
+                        <a href="#masterUdem">Master</a>
+                        <a href="#bacUniLu">Bachelor</a>
+                        <a href="#oc">Online Courses</a>
+                    </div>
+                </div>
                 <div class="dropdown">
                     <a class="drop-trigger" href="../projects/projects.html">Projects</a>
                     <div class="dropdown-content">
