--- a/pages/projects/projects.html
+++ b/pages/projects/projects.html
@@ -13,7 +13,14 @@
             <div class="links">
                 <a href="./../../index.html">Home</a>
                 <a href="../aboutme/aboutme.html">About Me</a>
-                <a href="../education/education.html">Education</a>
+                <div class="dropdown">
+                    <a class="drop-trigger" href="../education/education.html">Education</a>
+                    <div class="dropdown-content">
+                        <a href="../education/education.html#masterUdem">Master</a>
+                        <a href="../education/education.html#bacUniLu">Bachelor</a>
+                        <a href="../education/education.html#oc">Online Courses</a>
+                    </div>
+                </div>
                 <div class="dropdown">
                     <a class="drop-trigger" href="./projects.html">Projects</a>
                     <div class="dropdown-content">
