--- a/pages/aboutme/aboutme.html
+++ b/pages/aboutme/aboutme.html
@@ -14,7 +14,14 @@
             <div class="links">
                 <a href="./../../index.html">Home</a>
                 <a href="./aboutme.html">About Me</a>
-                <a href="../education/education.html">Education</a>
+                <div class="dropdown">
+                    <a class="drop-trigger" href="../education/education.html">Education</a>
+                    <div class="dropdown-content">
+                        <a href="../education/education.html#masterUdem">Master</a>
+                        <a href="../education/education.html#bacUniLu">Bachelor</a>
+                        <a href="../education/education.html#oc">Online Courses</a>
+                    </div>
+                </div>
                 <div class="dropdown">
                     <a class="drop-trigger" href="../projects/projects.html">Projects</a>
                     <div class="dropdown-content">
