Correction and interactivity of the project img in index.html

--- a/index.html
+++ b/index.html
@@ -67,9 +67,15 @@
                 <h2>Projects</h2>
                 <div class="img">
                     <figure>
-                        <img src="assets/img/projects/sparki.jpg" alt="A little Sparki robot" width="325" height="500">
-                        <img src="assets/img/projects/unreal_engine5.png" alt="A little Sparki robot" width="500" height="325">
-                        <img src="assets/img/projects/Q_learning_drone.png" alt="A little Sparki robot" width="500" height="325">
+                        <a href="./pages/projects/projects.html#sparki">
+                            <img src="assets/img/projects/sparki.jpg" alt="A little Sparki robot" width="325" height="500">
+                        </a>
+                        <a href="./pages/projects/projects.html#group_drone">
+                            <img src="assets/img/projects/unreal_engine4.png" alt="Unreal Engine 5 interface" width="500" height="325">
+                        </a>
+                        <a href="./pages/projects/projects.html#q_learning_drone">
+                            <img src="assets/img/projects/Q_learning_drone.png" alt="Q learning simluation environment" width="500" height="325">
+                        </a>
                     </figure>
                 </div>
                 <div class="links">
