Correction of index about me scetion links

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <div id='header'>
                 <div class="intro">
                     <figure class="fig_me">
-                        <a href="aboutme.html"><img src="assets/img/index/me.jpg" alt="A picture of me" width="325" height="500"/></a>
+                        <a href="./pages/aboutme/aboutme.html"><img src="assets/img/index/me.jpg" alt="A picture of me" width="325" height="500"/></a>
                     </figure>
                     <section>
-                        <a href="./aboutme.html"><h2>About Me</h2></a>
+                        <a href="./pages/aboutme/aboutme.html"><h2>About Me</h2></a>
                         <p> 
                             I'm Noé Jager, a master's student in Computer Science, with a diverse skillset honed during my university years and 
                             a passion for tackling new challenges. Over time, I've gained extensive experience in programming, specializing in 
