--- a/index.html
+++ b/index.html
@@ -30,6 +30,29 @@
                 </div>
             </div>
         </div>
+        <div id="sidebar">
+            <div class="links">
+                <a href="./index.html">Home</a>
+                <hr class="line">
+                <a href="./pages/aboutme/aboutme.html">About Me</a>
+                <hr class="line">
+                <div class="dropdown">
+                    <a class="drop-trigger" href="./pages/education/education.html">Education</a>
+                    <div class="dropdown-content">
+                        <a href="./pages/education/education.html#masterUdem">Master</a>
+                        <a href="./pages/education/education.html#bacUniLu">Bachelor</a>
+                        <a href="./pages/education/education.html#oc">Online Courses</a>
+                    </div>
+                </div>
+                <hr class="line">
+                <div class="dropdown">
+                    <a class="drop-trigger" href="./pages/projects/projects.html">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="./pages/projects/projects.html#bachelor_projects">Bachelor Projects</a>
+                    </div>
+                </div>
+            </div>
+        </div>
         <main>
             <div id='header'>
                 <div class="intro">
