--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     </head>
     <body>
         <div id="nav">
+            <div id="menu-toggle">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
             <a href="./index.html" class="title"><h1>Noe Jager</h1></a>
             <div class="links">
                 <a href="./index.html">Home</a>
@@ -33,9 +38,9 @@
         <div id="sidebar">
             <div class="links">
                 <a href="./index.html">Home</a>
-                <hr class="line">
+                <hr class="separator">
                 <a href="./pages/aboutme/aboutme.html">About Me</a>
-                <hr class="line">
+                <hr class="separator">
                 <div class="dropdown">
                     <a class="drop-trigger" href="./pages/education/education.html">Education</a>
                     <div class="dropdown-content">
@@ -44,7 +49,7 @@
                         <a href="./pages/education/education.html#oc">Online Courses</a>
                     </div>
                 </div>
-                <hr class="line">
+                <hr class="separator">
                 <div class="dropdown">
                     <a class="drop-trigger" href="./pages/projects/projects.html">Projects</a>
                     <div class="dropdown-content">
@@ -126,6 +131,6 @@
                 <a href="mailto:noe.p.jager@gmail.com"><img src="assets/img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
             </figure>
         </footer>
-        <script src="./events/nav_scroll.js"></script>
+        <script src="./events/script.js"></script>
     </body>
 </html>
