Applied to other pages

--- a/pages/education/education.html
+++ b/pages/education/education.html
@@ -9,6 +9,11 @@
     </head>
     <body>
         <div id="nav">
+            <div id="menu-toggle">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
             <a href="./../../index.html" class="title"><h1>Noe Jager</h1></a>
             <div class="links">
                 <a href="./../../index.html">Home</a>
@@ -21,6 +26,29 @@
                         <a href="#oc">Online Courses</a>
                     </div>
                 </div>
+                <div class="dropdown">
+                    <a class="drop-trigger" href="../projects/projects.html">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="../projects/projects.html#bachelor_projects">Bachelor Projects</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="sidebar">
+            <div class="links">
+                <a href="./../../index.html">Home</a>
+                <hr class="separator">
+                <a href="../aboutme/aboutme.html">About Me</a>
+                <hr class="separator">
+                <div class="dropdown">
+                    <a class="drop-trigger" href="./education.html">Education</a>
+                    <div class="dropdown-content">
+                        <a href="./education.html#masterUdem">Master</a>
+                        <a href="./education.html#bacUniLu">Bachelor</a>
+                        <a href="./education.html#oc">Online Courses</a>
+                    </div>
+                </div>
+                <hr class="separator">
                 <div class="dropdown">
                     <a class="drop-trigger" href="../projects/projects.html">Projects</a>
                     <div class="dropdown-content">
@@ -68,6 +96,6 @@
                 <a href="mailto:noe.p.jager@gmail.com"><img src="../../assets/img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
             </figure>
         </footer>
-        <script src="../../events/nav_scroll.js"></script>
+        <script src="../../events/script.js"></script>
     </body>
 </html>
