--- a/pages/aboutme/aboutme.html
+++ b/pages/aboutme/aboutme.html
@@ -10,6 +10,11 @@
     </head>
     <body>
         <div id="nav">
+            <div id="menu-toggle">
+                <div class="line"></div>
+                <div class="line"></div>
+                <div class="line"></div>
+            </div>
             <a href="./../../index.html" class="title"><h1>Noe Jager</h1></a>
             <div class="links">
                 <a href="./../../index.html">Home</a>
@@ -22,6 +27,29 @@
                         <a href="../education/education.html#oc">Online Courses</a>
                     </div>
                 </div>
+                <div class="dropdown">
+                    <a class="drop-trigger" href="../projects/projects.html">Projects</a>
+                    <div class="dropdown-content">
+                        <a href="../projects/projects.html#bachelor_projects">Bachelor Projects</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="sidebar">
+            <div class="links">
+                <a href="./../../index.html">Home</a>
+                <hr class="separator">
+                <a href="./aboutme.html">About Me</a>
+                <hr class="separator">
+                <div class="dropdown">
+                    <a class="drop-trigger" href="../education/education.html">Education</a>
+                    <div class="dropdown-content">
+                        <a href="../education/education.html#masterUdem">Master</a>
+                        <a href="../education/education.html#bacUniLu">Bachelor</a>
+                        <a href="../education/education.html#oc">Online Courses</a>
+                    </div>
+                </div>
+                <hr class="separator">
                 <div class="dropdown">
                     <a class="drop-trigger" href="../projects/projects.html">Projects</a>
                     <div class="dropdown-content">
@@ -106,6 +134,6 @@
                 <a href="mailto:noe.p.jager@gmail.com"><img src="../../assets/img/logo/gmail_logo.jpg" width="50px" height="50px" alt="Gmail"></a>
             </figure>
         </footer>
-        <script src="../../events/nav_scroll.js"></script>
+        <script src="../../events/script.js"></script>
     </body>
 </html>
