--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                     </figure>
                 </div>
                 <div class="links">
-                    <a href="./education.html#masterUdem"><h4>Master in Computer Science at Université de Montréal</h4></a>
+                    <a href="./pages/education/education.html#masterUdem"><h4>Master in Computer Science at Université de Montréal</h4></a>
                     <br>
-                    <a href="./education.html#bacUniLu"><h4>Bachelor of Science in Computer Science at University of Luxembourg</h4></a>
+                    <a href="./pages/education/education.html#bacUniLu"><h4>Bachelor of Science in Computer Science at University of Luxembourg</h4></a>
                     <br>
-                    <a href="./education.html#oc"><h4>Online Courses</h4></a>
+                    <a href="./pages/education/education.html#oc"><h4>Online Courses</h4></a>
                 </div>
             </div>
             <div id="projects_intro">
